Fix cursor on iphone; increase height of help text

--- a/src/App.css
+++ b/src/App.css
@@ -85,12 +85,13 @@ textarea {
   font-family: monospace;
   font-size: medium;
   width: 300px;
-  margin-left: 15px;
   overflow: auto;
   background-color: lightgray;
   background-image: url(./img/paper.png);
   background-size: cover;
   margin-top: 15px;
+  margin-left: 15px;
+  margin-right: 5px;
   opacity: 80%;
 }
 
@@ -143,12 +144,13 @@ select {
   appearance: none;
   -webkit-appearance: none;
   color: black;
-  font-size: 20px;
+  font-size: 23px;
   padding: 0px 0px;
-  width: 28px;
-  height: 28px;
+  width: 30px;
+  height: 30px;
   border-radius: 7px;
   margin: 2px;
+  margin-top: 4px;
   cursor: pointer;
   font-weight: 900;
   user-select: none;
